# envset

./: .aider.conf.yml  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  justfile
.github/workflows/: release.yml
src/: Cargo.toml  charser.rs  chumsky_parser.rs  lib.rs  main.rs  parse.rs  parser.rs  pegger.rs  tests.rs
