[package]
name = "envset"
version = "0.1.13"
edition = "2021"
description = "A command-line tool for setting environment variables in a .env file"
license = "ISC"
authors = ["Peter Schilling"]
repository = "https://github.com/schpet/envset"
keywords = ["env", "environment", "dotenv", "cli"]
categories = ["command-line-utilities", "config"]

[lib]
name = "envset"
path = "src/lib.rs"

[[bin]]
name = "envset"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
colored = "2.0"
atty = "0.2"
serde_json = "1.0.128"
serde = { version = "1.0.210", features = ["derive"] }
peg = "0.8.4"
chumsky = "0.9.3"
similar = "2.6.0"
term_size = "0.3.2"

[dev-dependencies]
strip-ansi-escapes = "0.2.0"
tempfile = "3.2"
