[package]
name = "envset"
version = "0.2.0"
edition = "2021"
description = "CLI for setting environment variables in a .env file"
license = "ISC"
authors = ["Peter Schilling"]
repository = "https://github.com/schpet/envset"
keywords = ["env", "environment", "dotenv", "cli"]
categories = ["command-line-utilities", "config"]
homepage = "https://github.com/schpet/envset"

[lib]
name = "envset"
path = "src/lib.rs"

[[bin]]
name = "envset"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
colored = "2.0"
atty = "0.2"
serde_json = "1.0.128"
serde = { version = "1.0.210", features = ["derive"] }
peg = "0.8.4"
chumsky = "0.9.3"
similar = "2.6.0"
term_size = "0.3.2"

[dev-dependencies]
strip-ansi-escapes = "0.2.0"
tempfile = "3.2"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.22.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "homebrew"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# A GitHub repo to push Homebrew formulas to
tap = "schpet/homebrew-tap"
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Publish jobs to run in CI
publish-jobs = ["homebrew"]
# Whether to install an updater program
install-updater = false
